# Retocripto

./: .gitignore  README_STREAMLIT.md  app_core.py  catalogo_estudios.xlsx  fernet.key  gitignore  pyproject.toml  requirements.txt  solicitudes_lis.csv  solicitudes_lis.xlsx  streamlit_app.py
MA2006B.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: coords_labza.json
