[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MA2006B"
version = "0.1.0"
description = "Paquete de apoyo para el curso MA2006B Uso de álgebras modernas para seguridad y cripto"
authors = [
  { name = "Raul Gomez", email = "rgomez@tec.mx" }
]
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "pandas",
  "openpyxl",
  "cryptography"
]

[tool.setuptools]
py-modules = ["app_core", "streamlit_app"]

[project.scripts]
